Update on the different types of images formats

--- a/odin-links-and-images/about.html
+++ b/odin-links-and-images/about.html
@@ -7,6 +7,11 @@
 
   <body>
     <h1>About Page</h1>
-    <p><img src="../images/dog.jpg" alt="Charlie the cute dog"></p>
+    <p><b>Mochi Images</b></p>
+    <p><img src="./images/mochi.jpg" alt="mochi images"/>
+    <img src="./images/mochi.gif" alt="mochi images"/>
+    <img src="./images/mochi.png" alt="mochi images"/>
+    <img src="./images/mochi.svg" alt="mochi images"/></p>
+    <p><img src="./images/dog.jpg" alt="Charlie the cute dog"></p>
   </body>
 </html>
