minor typographical error corrections to list.html

--- a/html-boilerplate/list.html
+++ b/html-boilerplate/list.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h2>Favorute Foods in the World</h2>
+        <h2>Favorite Foods in the World</h2>
         <p>Quick note: <em>I googled this list</em> List also include where 
             the originates from</p>
         <ul>
@@ -18,7 +18,7 @@
             <li>Rice Dish, Sushi. Japan</li>
         </ul>
 
-        <h2>daily Todos to Get Done</h2>
+        <h2>Daily Todos to Get Done</h2>
         <ol>
             <li>Get off the freaking bed, and lay it</li>
             <li>Open the Youversion app & Read my daily devotional</li>
